name:                razao-base
version:             1.0.0.1
synopsis:            Extended functionality for base package
description:
  This package extends some of the standard modules included in base to
  provide extra functionality we need. We follow the convention developed by
  Elevence to add a ".Extended" to each module name.
homepage:            https://github.com/dimitri-xyz/razao-base#readme
author:              Dimitri DeFigueiredo
maintainer:          defigueiredo@ucdavis.edu
Bug-Reports:         https://github.com/dimitri-xyz/razao-base/issues
copyright:           2017 Dimitri DeFigueiredo
license:             BSD3
license-file:        LICENSE
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

library
  hs-source-dirs:      src
  exposed-modules:     Prelude.Extended
                     , Data.List.Extended
                     , Reactive.Banana.Frameworks.Extended
                     , Razao.Util

  build-depends:       base >= 4.7 && < 5
                     , reactive-banana

  default-language:    Haskell2010

test-suite test-razao-base
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , razao-base
                     , tasty
                     , tasty-hunit

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dimitri-xyz/razao-base
